# keeb-coach

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/keeb_coach/: __init__.py  cli.py  config.py  fixes.py  report.py  scoring.py  storage.py
src/keeb_coach/detectors/: __init__.py  base.py  failed_retype.py  long_path.py  missing_alias.py  slow_tool.py  sudo_redo.py
src/keeb_coach/history/: atuin.py  loader.py  parser.py
src/keeb_coach/personas/: __init__.py
src/keeb_coach/personas/data/: default.toml  drill_sergeant.toml  passive_aggressive_pm.toml  zen_master.toml
tests/: conftest.py  test_atuin_loader.py  test_cli.py  test_config.py  test_detectors.py  test_failed_retype.py  test_fixes.py  test_history_loader.py  test_history_parser.py  test_long_path.py  test_personas.py  test_scoring_report.py  test_storage.py  test_sudo_redo.py
tests/fixtures/: bash_history.txt  zsh_history.txt
